--- a/pages/deportes/futbol/copa_libertadores/copa_libertadores.html
+++ b/pages/deportes/futbol/copa_libertadores/copa_libertadores.html
@@ -7,12 +7,38 @@
     <link rel="stylesheet" href="copa_libertadores.css">
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <div class="logo">
+                <a href="#"><img src="../images/logo.PNG" alt="Logo"></a>
+            </div>
+            <div class="enlaces">
+                <a href="../home_futbol.html">INICIO</a>
+                <a href="#">ESTADISTICAS</a>
+                <a href="#">VIDEOTECA</a>
+                <a href="#">+ DEPORTES</a>
+            </div>
+            <div class="ingreso">
+                <a href="#">LOGIN</a>
+                <a href="#">REGISTRO</a>
+            </div>
+        </nav>
+    </header>
 
 
 
 
-
+    <footer>
+        <div class="redes-sociales">
+           <p>Seguinos en:</p>
+           <a href="https://www.facebook.com/" class="icono-facebook"><img src="./images/redes-sociales/facebook.png" alt="Facebook"></a>
+           <a href="https://twitter.com/" class="icono-twitter"><img src="./images/redes-sociales/twitter.png" alt="Twitter"></a>
+           <a href="https://www.instagram.com/?hl=es-la" class="icono-instagram"><img src="./images/redes-sociales/instagram.png" alt="Instagram"></a>
+       </div>
+       <div class="derechos-reservados">
+           <p>&copy; DEPOLOGS. Todos los derechos reservados.</p>
+       </div>
+</footer>
     <script src="copa_libertadores.js"></script>
 </body>
 </html>
