--- a/pages/biblioteca_videos/home_videos.html
+++ b/pages/biblioteca_videos/home_videos.html
@@ -30,12 +30,20 @@
         </button>
     </div>
 
-    <div class="carousel-container">
-        <div class="carousel" id="imageCarousel">
-            <!-- Aquí van tus imágenes -->
-            <img src="./fotos home/f1.jpg">
-            <img src="./fotos home/handball.jpg">
-            <img src="./fotos home/voley.jpeg">
+    <div class="carucel">
+        <div class="carousel-container">
+            <div class="carousel" id="imageCarousel">
+                <!-- Aquí van tus imágenes -->
+                <img src="./fotos home/f1.jpg">
+                <img src="./fotos home/handball.jpg">
+                <img src="./fotos home/voley.jpeg">
+                <img src="./fotos home/f1.jpg">
+                <img src="./fotos home/handball.jpg">
+                <img src="./fotos home/voley.jpeg">
+                <img src="./fotos home/f1.jpg">
+                <img src="./fotos home/handball.jpg">
+                <img src="./fotos home/voley.jpeg">
+            </div>
         </div>
     </div>
    
