--- a/pages/deportes/Voley/home_voley.html
+++ b/pages/deportes/Voley/home_voley.html
@@ -36,7 +36,133 @@
     
     </header>
 
+    <section class="potencias_mundiales">
+
+        <div class="potencia_masculina">
+
+            <table>
+                <tr>
+                    <th>Pos.</th>
+                    <th>Equipo</th>
+                    <th>Puntos</th>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td><img src="./imagenes/banderas/bandera_polonia.jpeg" alt=""> Polonia</td>
+                    <td>418</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td><img src="./imagenes/banderas/bandera_eeuu.png" alt=""> Estados Unidos</td>
+                    <td>379</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td><img src="./imagenes/banderas/bandera_italia.jpeg" alt="">Italia</td>
+                    <td>366</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td><img src="./imagenes/banderas/bandera_brasil.png" alt="">Brasil</td>
+                    <td>337</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td><img src="./imagenes/banderas/bandera_japon.jpeg" alt="">Japón</td>
+                    <td>334</td>
+                </tr>
+                <tr>
+                    <td>6</td>
+                    <td><img src="./imagenes/banderas/bandera_argentina.jpeg" alt="">Argentina</td>
+                    <td>400</td>
+                </tr>
+                <tr>
+                    <td>7</td>
+                    <td><img src="./imagenes/banderas/bandera_francia.png" alt="">Francia</td>
+                    <td>400</td>
+                </tr>
+                <tr>
+                    <td>8</td>
+                    <td><img src="./imagenes/banderas/bandera_eslovenia.png" alt="">Eslovenia</td>
+                    <td>400</td>
+                </tr>
+                <tr>
+                    <td>9</td>
+                    <td><img src="./imagenes/banderas/bandera_serbia.png" alt="">Serbia</td>
+                    <td>400</td>
+                </tr>
+                <tr>
+                    <td>10</td>
+                    <td><img src="./imagenes/banderas/bandera_iran.jpeg" alt="">Irán</td>
+                    <td>400</td>
+                </tr>
+            </table>
     
+        </div>
+
+        <div class="potencia_femenina">
+
+            <table>
+                <tr>
+                    <th>Pos.</th>
+                    <th>Equipo</th>
+                    <th>Puntos</th>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>Polonia</td>
+                    <td>418</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Estados Unidos</td>
+                    <td>400</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Estados Unidos</td>
+                    <td>400</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Estados Unidos</td>
+                    <td>400</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Estados Unidos</td>
+                    <td>400</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Estados Unidos</td>
+                    <td>400</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Estados Unidos</td>
+                    <td>400</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Estados Unidos</td>
+                    <td>400</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Estados Unidos</td>
+                    <td>400</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Estados Unidos</td>
+                    <td>400</td>
+                </tr>
+            </table>
+
+        </div>
+
+    </section>
 
     <section class="carrusel">
         <div class="noticias">
