--- a/pages/deportes/Voley/home_voley.html
+++ b/pages/deportes/Voley/home_voley.html
@@ -37,7 +37,7 @@
     </header>
 
     <section class="potencias_mundiales">
-
+        <h2>Potencias Mundiales del Voley</h2>
         <div class="potencia_masculina">
 
             <table>
@@ -48,53 +48,53 @@
                 </tr>
                 <tr>
                     <td>1</td>
-                    <td><img src="./imagenes/banderas/bandera_polonia.jpeg" alt=""> Polonia</td>
+                    <td><img src="./imagenes/banderas/bandera_polonia.png" alt="Bandera Polonia"> Polonia</td>
                     <td>418</td>
                 </tr>
                 <tr>
                     <td>2</td>
-                    <td><img src="./imagenes/banderas/bandera_eeuu.png" alt=""> Estados Unidos</td>
+                    <td><img src="./imagenes/banderas/bandera_eeuu.png" alt="Bandera Estados Unidos"> Estados Unidos</td>
                     <td>379</td>
                 </tr>
                 <tr>
                     <td>3</td>
-                    <td><img src="./imagenes/banderas/bandera_italia.jpeg" alt="">Italia</td>
+                    <td><img src="./imagenes/banderas/bandera_italia.png" alt="Bandera Italia">Italia</td>
                     <td>366</td>
                 </tr>
                 <tr>
                     <td>4</td>
-                    <td><img src="./imagenes/banderas/bandera_brasil.png" alt="">Brasil</td>
+                    <td><img src="./imagenes/banderas/bandera_brasil.png" alt="Bandera Brasil">Brasil</td>
                     <td>337</td>
                 </tr>
                 <tr>
                     <td>5</td>
-                    <td><img src="./imagenes/banderas/bandera_japon.jpeg" alt="">Japón</td>
+                    <td><img src="./imagenes/banderas/bandera_japon.png" alt="Bandera Japón">Japón</td>
                     <td>334</td>
                 </tr>
                 <tr>
                     <td>6</td>
-                    <td><img src="./imagenes/banderas/bandera_argentina.jpeg" alt="">Argentina</td>
-                    <td>400</td>
+                    <td><img src="./imagenes/banderas/bandera_argentina.png" alt="Bandera Argentina">Argentina</td>
+                    <td>319</td>
                 </tr>
                 <tr>
                     <td>7</td>
-                    <td><img src="./imagenes/banderas/bandera_francia.png" alt="">Francia</td>
-                    <td>400</td>
+                    <td><img src="./imagenes/banderas/bandera_francia.png" alt="Bandera Francia">Francia</td>
+                    <td>307</td>
                 </tr>
                 <tr>
                     <td>8</td>
-                    <td><img src="./imagenes/banderas/bandera_eslovenia.png" alt="">Eslovenia</td>
-                    <td>400</td>
+                    <td><img src="./imagenes/banderas/bandera_eslovenia.png" alt="Bandera Eslovenia">Eslovenia</td>
+                    <td>303</td>
                 </tr>
                 <tr>
                     <td>9</td>
-                    <td><img src="./imagenes/banderas/bandera_serbia.png" alt="">Serbia</td>
-                    <td>400</td>
+                    <td><img src="./imagenes/banderas/bandera_serbia.png" alt="Bandera Serbia">Serbia</td>
+                    <td>269</td>
                 </tr>
                 <tr>
                     <td>10</td>
-                    <td><img src="./imagenes/banderas/bandera_iran.jpeg" alt="">Irán</td>
-                    <td>400</td>
+                    <td><img src="./imagenes/banderas/bandera_iran.png" alt="Bandera Iran">Irán</td>
+                    <td>247</td>
                 </tr>
             </table>
     
@@ -110,53 +110,53 @@
                 </tr>
                 <tr>
                     <td>1</td>
-                    <td>Polonia</td>
-                    <td>418</td>
+                    <td><img src="./imagenes/banderas/bandera_turquia.png" alt="Bandera Turquia">Turquía</td>
+                    <td>386</td>
                 </tr>
                 <tr>
                     <td>2</td>
-                    <td>Estados Unidos</td>
-                    <td>400</td>
+                    <td><img src="./imagenes/banderas/bandera_serbia.png" alt="Bandera Serbia">Serbia</td>
+                    <td>363</td>
                 </tr>
                 <tr>
-                    <td>2</td>
-                    <td>Estados Unidos</td>
-                    <td>400</td>
+                    <td>3</td>
+                    <td><img src="./imagenes/banderas/bandera_eeuu.png" alt="Bandera Estados Unidos">Estados Unidos</td>
+                    <td>361</td>
                 </tr>
                 <tr>
-                    <td>2</td>
-                    <td>Estados Unidos</td>
-                    <td>400</td>
+                    <td>4</td>
+                    <td><img src="./imagenes/banderas/bandera_brasil.png" alt="Bandera Brasil">Brasil</td>
+                    <td>353</td>
                 </tr>
                 <tr>
-                    <td>2</td>
-                    <td>Estados Unidos</td>
-                    <td>400</td>
+                    <td>5</td>
+                    <td><img src="./imagenes/banderas/bandera_italia.png" alt="Bandera Italia">Italia</td>
+                    <td>347</td>
                 </tr>
                 <tr>
-                    <td>2</td>
-                    <td>Estados Unidos</td>
-                    <td>400</td>
+                    <td>6</td>
+                    <td><img src="./imagenes/banderas/bandera_china.png" alt="Bandera China">China</td>
+                    <td>345</td>
                 </tr>
                 <tr>
-                    <td>2</td>
-                    <td>Estados Unidos</td>
-                    <td>400</td>
+                    <td>7</td>
+                    <td><img src="./imagenes/banderas/bandera_polonia.png" alt="Bandera Polonia">Polonia</td>
+                    <td>320</td>
                 </tr>
                 <tr>
-                    <td>2</td>
-                    <td>Estados Unidos</td>
-                    <td>400</td>
+                    <td>8</td>
+                    <td><img src="./imagenes/banderas/bandera_japon.png" alt="Bandera Japón">Japón</td>
+                    <td>303</td>
                 </tr>
                 <tr>
-                    <td>2</td>
-                    <td>Estados Unidos</td>
-                    <td>400</td>
+                    <td>9</td>
+                    <td><img src="./imagenes/banderas/bandera_paisesbajos.png" alt="Bandera Paises Bajos">Paises Bajos</td>
+                    <td>288</td>
                 </tr>
                 <tr>
-                    <td>2</td>
-                    <td>Estados Unidos</td>
-                    <td>400</td>
+                    <td>10</td>
+                    <td><img src="./imagenes/banderas/bandera_republicadominicana.png" alt="Bandera Republica Dominicana">República Dominicana</td>
+                    <td>284</td>
                 </tr>
             </table>
 
