SE MEJORA LA SECCION DE VIDEOS

--- a/pages/biblioteca_videos/home_videos.html
+++ b/pages/biblioteca_videos/home_videos.html
@@ -30,23 +30,362 @@
         </button>
     </div>
 
-    <div class="carucel">
-        <div class="carousel-container">
-            <div class="carousel" id="imageCarousel">
-                <!-- Aquí van tus imágenes -->
-                <img src="./fotos home/f1.jpg">
-                <img src="./fotos home/handball.jpg">
-                <img src="./fotos home/voley.jpeg">
-                <img src="./fotos home/f1.jpg">
-                <img src="./fotos home/handball.jpg">
-                <img src="./fotos home/voley.jpeg">
-                <img src="./fotos home/f1.jpg">
-                <img src="./fotos home/handball.jpg">
-                <img src="./fotos home/voley.jpeg">
+    <!--boton donde nos dirigira a la seccion del deporte marcado en el mismo-->
+    <div class="seccion">
+        <button class="uiverse">
+            <div class="wrapper">
+                <span>FUTBOL</span>
+                <div class="circle circle-12"></div>
+                <div class="circle circle-11"></div>
+                <div class="circle circle-10"></div>
+                <div class="circle circle-9"></div>
+                <div class="circle circle-8"></div>
+                <div class="circle circle-7"></div>
+                <div class="circle circle-6"></div>
+                <div class="circle circle-5"></div>
+                <div class="circle circle-4"></div>
+                <div class="circle circle-3"></div>
+                <div class="circle circle-2"></div>
+                <div class="circle circle-1"></div>
             </div>
+        </button>
+    </div>
+    <!--carousel de fotos-->
+    <div class="carousel">
+        <div class="card">
+            <p><img src="./fotos home/f1.jpg"></p>
+            <p><img src="./fotos home/voley.jpeg"></p>
+            <p><img src="./fotos home/handball.jpg"></p>
+            <p><img src="./fotos home/f1.jpg"></p>
+            <p><img src="./fotos home/handball.jpg"></p>
+            <p><img src="./fotos home/voley.jpeg"></p>
+        </div>
+    </div>
+    <!--carousel de videos-->
+    <div class="carousel">
+        <div class="card">
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+        </div>
+    </div>
+    <div class="seccion">
+        <button class="uiverse">
+            <div class="wrapper">
+                <span>HANDBALL</span>
+                <div class="circle circle-12"></div>
+                <div class="circle circle-11"></div>
+                <div class="circle circle-10"></div>
+                <div class="circle circle-9"></div>
+                <div class="circle circle-8"></div>
+                <div class="circle circle-7"></div>
+                <div class="circle circle-6"></div>
+                <div class="circle circle-5"></div>
+                <div class="circle circle-4"></div>
+                <div class="circle circle-3"></div>
+                <div class="circle circle-2"></div>
+                <div class="circle circle-1"></div>
+            </div>
+        </button>
+    </div>
+    <div class="carousel">
+        <div class="card">
+            <p><img src="./fotos home/f1.jpg"></p>
+            <p><img src="./fotos home/voley.jpeg"></p>
+            <p><img src="./fotos home/handball.jpg"></p>
+            <p><img src="./fotos home/f1.jpg"></p>
+            <p><img src="./fotos home/handball.jpg"></p>
+            <p><img src="./fotos home/voley.jpeg"></p>
+        </div>
+    </div>
+    <div class="carousel">
+        <div class="card">
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+        </div>
+    </div>
+    <div class="seccion">
+        <button class="uiverse">
+            <div class="wrapper">
+                <span>BADMINTON</span>
+                <div class="circle circle-12"></div>
+                <div class="circle circle-11"></div>
+                <div class="circle circle-10"></div>
+                <div class="circle circle-9"></div>
+                <div class="circle circle-8"></div>
+                <div class="circle circle-7"></div>
+                <div class="circle circle-6"></div>
+                <div class="circle circle-5"></div>
+                <div class="circle circle-4"></div>
+                <div class="circle circle-3"></div>
+                <div class="circle circle-2"></div>
+                <div class="circle circle-1"></div>
+            </div>
+        </button>
+    </div>
+    <div class="carousel">
+        <div class="card">
+            <p><img src="./fotos home/f1.jpg"></p>
+            <p><img src="./fotos home/voley.jpeg"></p>
+            <p><img src="./fotos home/handball.jpg"></p>
+            <p><img src="./fotos home/f1.jpg"></p>
+            <p><img src="./fotos home/handball.jpg"></p>
+            <p><img src="./fotos home/voley.jpeg"></p>
+        </div>
+    </div>
+    <div class="carousel">
+        <div class="card">
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+        </div>
+    </div>
+    <div class="seccion">
+        <button class="uiverse">
+            <div class="wrapper">
+                <span>BASEBALL</span>
+                <div class="circle circle-12"></div>
+                <div class="circle circle-11"></div>
+                <div class="circle circle-10"></div>
+                <div class="circle circle-9"></div>
+                <div class="circle circle-8"></div>
+                <div class="circle circle-7"></div>
+                <div class="circle circle-6"></div>
+                <div class="circle circle-5"></div>
+                <div class="circle circle-4"></div>
+                <div class="circle circle-3"></div>
+                <div class="circle circle-2"></div>
+                <div class="circle circle-1"></div>
+            </div>
+        </button>
+    </div>
+    <div class="carousel">
+        <div class="card">
+            <p><img src="./fotos home/f1.jpg"></p>
+            <p><img src="./fotos home/voley.jpeg"></p>
+            <p><img src="./fotos home/handball.jpg"></p>
+            <p><img src="./fotos home/f1.jpg"></p>
+            <p><img src="./fotos home/handball.jpg"></p>
+            <p><img src="./fotos home/voley.jpeg"></p>
+        </div>
+    </div>
+    <div class="carousel">
+        <div class="card">
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+        </div>
+    </div>
+    <div class="seccion">
+        <button class="uiverse">
+            <div class="wrapper">
+                <span>TENIS</span>
+                <div class="circle circle-12"></div>
+                <div class="circle circle-11"></div>
+                <div class="circle circle-10"></div>
+                <div class="circle circle-9"></div>
+                <div class="circle circle-8"></div>
+                <div class="circle circle-7"></div>
+                <div class="circle circle-6"></div>
+                <div class="circle circle-5"></div>
+                <div class="circle circle-4"></div>
+                <div class="circle circle-3"></div>
+                <div class="circle circle-2"></div>
+                <div class="circle circle-1"></div>
+            </div>
+        </button>
+    </div>
+    <div class="carousel">
+        <div class="card">
+            <p><img src="./fotos home/f1.jpg"></p>
+            <p><img src="./fotos home/voley.jpeg"></p>
+            <p><img src="./fotos home/handball.jpg"></p>
+            <p><img src="./fotos home/f1.jpg"></p>
+            <p><img src="./fotos home/handball.jpg"></p>
+            <p><img src="./fotos home/voley.jpeg"></p>
+        </div>
+    </div>
+    <div class="carousel">
+        <div class="card">
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+        </div>
+    </div>
+    <div class="seccion">
+        <button class="uiverse">
+            <div class="wrapper">
+                <span>VOLEY</span>
+                <div class="circle circle-12"></div>
+                <div class="circle circle-11"></div>
+                <div class="circle circle-10"></div>
+                <div class="circle circle-9"></div>
+                <div class="circle circle-8"></div>
+                <div class="circle circle-7"></div>
+                <div class="circle circle-6"></div>
+                <div class="circle circle-5"></div>
+                <div class="circle circle-4"></div>
+                <div class="circle circle-3"></div>
+                <div class="circle circle-2"></div>
+                <div class="circle circle-1"></div>
+            </div>
+        </button>
+    </div>
+    <div class="carousel">
+        <div class="card">
+            <p><img src="./fotos home/f1.jpg"></p>
+            <p><img src="./fotos home/voley.jpeg"></p>
+            <p><img src="./fotos home/handball.jpg"></p>
+            <p><img src="./fotos home/f1.jpg"></p>
+            <p><img src="./fotos home/handball.jpg"></p>
+            <p><img src="./fotos home/voley.jpeg"></p>
+        </div>
+    </div>
+    <div class="carousel">
+        <div class="card">
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+        </div>
+    </div>
+    <div class="seccion">
+        <button class="uiverse">
+            <div class="wrapper">
+                <span>COUNTER STRIKE</span>
+                <div class="circle circle-12"></div>
+                <div class="circle circle-11"></div>
+                <div class="circle circle-10"></div>
+                <div class="circle circle-9"></div>
+                <div class="circle circle-8"></div>
+                <div class="circle circle-7"></div>
+                <div class="circle circle-6"></div>
+                <div class="circle circle-5"></div>
+                <div class="circle circle-4"></div>
+                <div class="circle circle-3"></div>
+                <div class="circle circle-2"></div>
+                <div class="circle circle-1"></div>
+            </div>
+        </button>
+    </div>
+    <div class="carousel">
+        <div class="card">
+            <p><img src="./fotos home/f1.jpg"></p>
+            <p><img src="./fotos home/voley.jpeg"></p>
+            <p><img src="./fotos home/handball.jpg"></p>
+            <p><img src="./fotos home/f1.jpg"></p>
+            <p><img src="./fotos home/handball.jpg"></p>
+            <p><img src="./fotos home/voley.jpeg"></p>
+        </div>
+    </div>
+    <div class="carousel">
+        <div class="card">
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+        </div>
+    </div>
+    <div class="seccion">
+        <button class="uiverse">
+            <div class="wrapper">
+                <span>FORMULA 1</span>
+                <div class="circle circle-12"></div>
+                <div class="circle circle-11"></div>
+                <div class="circle circle-10"></div>
+                <div class="circle circle-9"></div>
+                <div class="circle circle-8"></div>
+                <div class="circle circle-7"></div>
+                <div class="circle circle-6"></div>
+                <div class="circle circle-5"></div>
+                <div class="circle circle-4"></div>
+                <div class="circle circle-3"></div>
+                <div class="circle circle-2"></div>
+                <div class="circle circle-1"></div>
+            </div>
+        </button>
+    </div>
+    <div class="carousel">
+        <div class="card">
+            <p><img src="./fotos home/f1.jpg"></p>
+            <p><img src="./fotos home/voley.jpeg"></p>
+            <p><img src="./fotos home/handball.jpg"></p>
+            <p><img src="./fotos home/f1.jpg"></p>
+            <p><img src="./fotos home/handball.jpg"></p>
+            <p><img src="./fotos home/voley.jpeg"></p>
+        </div>
+    </div>
+    <div class="carousel">
+        <div class="card">
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+        </div>
+    </div>
+    <div class="seccion">
+        <button class="uiverse">
+            <div class="wrapper">
+                <span>VALORANT</span>
+                <div class="circle circle-12"></div>
+                <div class="circle circle-11"></div>
+                <div class="circle circle-10"></div>
+                <div class="circle circle-9"></div>
+                <div class="circle circle-8"></div>
+                <div class="circle circle-7"></div>
+                <div class="circle circle-6"></div>
+                <div class="circle circle-5"></div>
+                <div class="circle circle-4"></div>
+                <div class="circle circle-3"></div>
+                <div class="circle circle-2"></div>
+                <div class="circle circle-1"></div>
+            </div>
+        </button>
+    </div>
+    <div class="carousel">
+        <div class="card">
+            <p><img src="./fotos home/f1.jpg"></p>
+            <p><img src="./fotos home/voley.jpeg"></p>
+            <p><img src="./fotos home/handball.jpg"></p>
+            <p><img src="./fotos home/f1.jpg"></p>
+            <p><img src="./fotos home/handball.jpg"></p>
+            <p><img src="./fotos home/voley.jpeg"></p>
+        </div>
+    </div>
+    <div class="carousel">
+        <div class="card">
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
+            <p><source src="" type="video/mp4"></p>
         </div>
     </div>
    
+    <!--EN ESTA PARTE SE ENCUENTRA EL TEXTO CAMBIANTE-->
     <div class="texto-cambiante">
         <div class="cardcambiante">
             <a class="card1" href="#">
