se agregan botones referanciales a home videos

--- a/pages/biblioteca_videos/home_videos.html
+++ b/pages/biblioteca_videos/home_videos.html
@@ -29,9 +29,50 @@
             <span></span>
         </button>
     </div>
-
+    <!--referenciales de la biblioteca-->
+    <div class="referenciales">
+        <a href="#futbol">
+            <button class="btn" ><i class="animation"></i>FUTBOL<i class="animation"></i>
+            </button>
+        </a>
+        <a href="#handball">
+            <button class="btn"><i class="animation"></i>HANDBALL<i class="animation"></i>
+            </button>
+        </a>
+        <a href="#badminton">
+            <button class="btn"><i class="animation"></i>BADMINTON<i class="animation"></i>
+            </button>
+        </a>
+        <a href="#baseball">
+            <button class="btn"><i class="animation"></i>BASEBALL<i class="animation"></i>
+            </button>
+        </a>
+        <a href="#tenis">
+            <button class="btn"><i class="animation"></i>TENIS<i class="animation"></i>
+            </button>
+        </a>
+    </div>
+    <div class="referenciales">
+        <a href="#voley">
+            <button class="btn"><i class="animation"></i>VOLEY<i class="animation"></i>
+            </button>
+        </a>
+        <a href="#counter">
+            <button class="btn"><i class="animation"></i>COUNTER STRIKE<i class="animation"></i>
+            </button>
+        </a>
+        <a href="#formula">
+            <button class="btn"><i class="animation"></i>FORMULA 1<i class="animation"></i>
+            </button>
+        </a>
+        <a href="#valorant">
+            <button class="btn"><i class="animation"></i>VALORANT<i class="animation"></i>
+            </button>
+        </a>
+    </div>
+    
     <!--boton donde nos dirigira a la seccion del deporte marcado en el mismo-->
-    <div class="seccion">
+    <div class="seccion" id="futbol">
         <button class="uiverse">
             <div class="wrapper">
                 <span>FUTBOL</span>
@@ -72,7 +113,7 @@
             <p><source src="" type="video/mp4"></p>
         </div>
     </div>
-    <div class="seccion">
+    <div class="seccion" id="handball">
         <button class="uiverse">
             <div class="wrapper">
                 <span>HANDBALL</span>
@@ -112,7 +153,7 @@
         </div>
     </div>
     <div class="seccion">
-        <button class="uiverse">
+        <button class="uiverse" id="badminton">
             <div class="wrapper">
                 <span>BADMINTON</span>
                 <div class="circle circle-12"></div>
@@ -151,7 +192,7 @@
         </div>
     </div>
     <div class="seccion">
-        <button class="uiverse">
+        <button class="uiverse" id="baseball">
             <div class="wrapper">
                 <span>BASEBALL</span>
                 <div class="circle circle-12"></div>
@@ -190,7 +231,7 @@
         </div>
     </div>
     <div class="seccion">
-        <button class="uiverse">
+        <button class="uiverse" id="tenis">
             <div class="wrapper">
                 <span>TENIS</span>
                 <div class="circle circle-12"></div>
@@ -229,7 +270,7 @@
         </div>
     </div>
     <div class="seccion">
-        <button class="uiverse">
+        <button class="uiverse" id="voley">
             <div class="wrapper">
                 <span>VOLEY</span>
                 <div class="circle circle-12"></div>
@@ -268,7 +309,7 @@
         </div>
     </div>
     <div class="seccion">
-        <button class="uiverse">
+        <button class="uiverse" id="counter">
             <div class="wrapper">
                 <span>COUNTER STRIKE</span>
                 <div class="circle circle-12"></div>
@@ -306,8 +347,8 @@
             <p><source src="" type="video/mp4"></p>
         </div>
     </div>
-    <div class="seccion">
-        <button class="uiverse">
+    <div class="seccion" >
+        <button class="uiverse" id="formula" onclick="window.location.href = '../deportes/f1/home_f1.html'">
             <div class="wrapper">
                 <span>FORMULA 1</span>
                 <div class="circle circle-12"></div>
@@ -346,7 +387,7 @@
         </div>
     </div>
     <div class="seccion">
-        <button class="uiverse">
+        <button class="uiverse" id="valorant">
             <div class="wrapper">
                 <span>VALORANT</span>
                 <div class="circle circle-12"></div>
