--- a/pages/biblioteca_videos/home_videos.html
+++ b/pages/biblioteca_videos/home_videos.html
@@ -50,6 +50,22 @@
             </div>
         </button>
     </div>
+    <!--boton que te lleva al inicio de la pagina-->
+    <button id="scrollToTopBtn" onclick="scrollToTop()" class="scroll">
+        <div class="text">
+            <span>Ir</span>
+            <span>A</span>
+            <span>Arriba</span>
+        </div>
+        <div class="clone">
+            <span>Ir</span>
+            <span>A</span>
+            <span>Arriba</span>
+        </div>
+        <svg width="20px" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M14 5l7 7m0 0l-7 7m7-7H3"></path>
+        </svg>
+    </button>
     <!--carousel de fotos-->
     <div class="carousel">
         <div class="card">
@@ -328,9 +344,9 @@
     <div class="carousel">
         <div class="card">
             <p><img src="./fotos home/f1.jpg"></p>
-            <p><img src="./fotos home/voley.jpeg"></p>
-            <p><img src="./fotos home/handball.jpg"></p>
-            <p><img src="./fotos home/f1.jpg"></p>
+            <p><img src="./fotos home/aston martin.jpg"></p>
+            <p><img src="./fotos home/red bull.jpg"></p>
+            <p><img src="./fotos home/alpine.jpg"></p>
             <p><img src="./fotos home/handball.jpg"></p>
             <p><img src="./fotos home/voley.jpeg"></p>
         </div>
