--- a/pages/biblioteca_videos/home_videos.html
+++ b/pages/biblioteca_videos/home_videos.html
@@ -388,8 +388,8 @@
             <p><img src="./fotos home/aston martin.jpg"></p>
             <p><img src="./fotos home/red bull.jpg"></p>
             <p><img src="./fotos home/alpine.jpg"></p>
-            <p><img src="./fotos home/handball.jpg"></p>
-            <p><img src="./fotos home/voley.jpeg"></p>
+            <p><img src="./fotos home/ferrari.jpg"></p>
+            <p><img src="./fotos home/mclaren.jpg"></p>
         </div>
     </div>
     <div class="carousel">
