--- a/pages/biblioteca_videos/home_videos.html
+++ b/pages/biblioteca_videos/home_videos.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <link rel="stylesheet" href="home_videos.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bebas Neues">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Depologs Biblioteca</title>
@@ -71,6 +72,23 @@
         </a>
     </div>
     
+     <!--boton que te lleva al inicio de la pagina-->
+     <button id="scrollToTopBtn" onclick="scrollToTop()" class="scroll">
+        <div class="text">
+            <span>Ir</span>
+            <span>A</span>
+            <span>Arriba</span>
+        </div>
+        <div class="clone">
+            <span>Ir</span>
+            <span>A</span>
+            <span>Arriba</span>
+        </div>
+        <svg width="20px" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M14 5l7 7m0 0l-7 7m7-7H3"></path>
+        </svg>
+    </button>
+
     <!--boton donde nos dirigira a la seccion del deporte marcado en el mismo-->
     <div class="seccion" id="futbol">
         <button class="uiverse">
@@ -90,23 +108,7 @@
                 <div class="circle circle-1"></div>
             </div>
         </button>
-    </div>
-    <!--boton que te lleva al inicio de la pagina-->
-    <button id="scrollToTopBtn" onclick="scrollToTop()" class="scroll">
-        <div class="text">
-            <span>Ir</span>
-            <span>A</span>
-            <span>Arriba</span>
-        </div>
-        <div class="clone">
-            <span>Ir</span>
-            <span>A</span>
-            <span>Arriba</span>
-        </div>
-        <svg width="20px" xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-            <path stroke-linecap="round" stroke-linejoin="round" d="M14 5l7 7m0 0l-7 7m7-7H3"></path>
-        </svg>
-    </button>
+    </div> 
     <!--carousel de fotos-->
     <div class="carousel">
         <div class="card">
@@ -127,6 +129,14 @@
             <p><source src="" type="video/mp4"></p>
             <p><source src="" type="video/mp4"></p>
             <p><source src="" type="video/mp4"></p>
+        </div>
+    </div>
+    <!--boton para ver mas contenido de la biblioteca de cada uno de los deportes-->
+    <div class="btnmas">
+        <div class="buttonmas">
+            <span class="button-border">
+                <p style="font-family: Bebas Neue, sans-serif;">VER MAS FOTOS Y VIDEOS</p>
+            </span>
         </div>
     </div>
     <div class="seccion" id="handball">
@@ -168,6 +178,13 @@
             <p><source src="" type="video/mp4"></p>
         </div>
     </div>
+    <div class="btnmas">
+        <div class="buttonmas">
+            <span class="button-border">
+                <p style="font-family: Bebas Neue, sans-serif;">VER MAS FOTOS Y VIDEOS</p>
+            </span>
+        </div>
+    </div>
     <div class="seccion">
         <button class="uiverse" id="badminton">
             <div class="wrapper">
@@ -205,6 +222,13 @@
             <p><source src="" type="video/mp4"></p>
             <p><source src="" type="video/mp4"></p>
             <p><source src="" type="video/mp4"></p>
+        </div>
+    </div>
+    <div class="btnmas">
+        <div class="buttonmas">
+            <span class="button-border">
+                <p style="font-family: Bebas Neue, sans-serif;">VER MAS FOTOS Y VIDEOS</p>
+            </span>
         </div>
     </div>
     <div class="seccion">
@@ -246,6 +270,13 @@
             <p><source src="" type="video/mp4"></p>
         </div>
     </div>
+    <div class="btnmas">
+        <div class="buttonmas">
+            <span class="button-border">
+                <p style="font-family: Bebas Neue, sans-serif;">VER MAS FOTOS Y VIDEOS</p>
+            </span>
+        </div>
+    </div>
     <div class="seccion">
         <button class="uiverse" id="tenis">
             <div class="wrapper">
@@ -283,6 +314,13 @@
             <p><source src="" type="video/mp4"></p>
             <p><source src="" type="video/mp4"></p>
             <p><source src="" type="video/mp4"></p>
+        </div>
+    </div>
+    <div class="btnmas">
+        <div class="buttonmas">
+            <span class="button-border">
+                <p style="font-family: Bebas Neue, sans-serif;">VER MAS FOTOS Y VIDEOS</p>
+            </span>
         </div>
     </div>
     <div class="seccion">
@@ -324,6 +362,13 @@
             <p><source src="" type="video/mp4"></p>
         </div>
     </div>
+    <div class="btnmas">
+        <div class="buttonmas">
+            <span class="button-border">
+                <p style="font-family: Bebas Neue, sans-serif;">VER MAS FOTOS Y VIDEOS</p>
+            </span>
+        </div>
+    </div>
     <div class="seccion">
         <button class="uiverse" id="counter">
             <div class="wrapper">
@@ -361,6 +406,13 @@
             <p><source src="" type="video/mp4"></p>
             <p><source src="" type="video/mp4"></p>
             <p><source src="" type="video/mp4"></p>
+        </div>
+    </div>
+    <div class="btnmas">
+        <div class="buttonmas">
+            <span class="button-border">
+                <p style="font-family: Bebas Neue, sans-serif;">VER MAS FOTOS Y VIDEOS</p>
+            </span>
         </div>
     </div>
     <div class="seccion" >
@@ -402,6 +454,13 @@
             <p><source src="" type="video/mp4"></p>
         </div>
     </div>
+    <div class="btnmas">
+        <div class="buttonmas">
+            <span class="button-border">
+                <p style="font-family: Bebas Neue, sans-serif;">VER MAS FOTOS Y VIDEOS</p>
+            </span>
+        </div>
+    </div>
     <div class="seccion">
         <button class="uiverse" id="valorant">
             <div class="wrapper">
@@ -439,6 +498,13 @@
             <p><source src="" type="video/mp4"></p>
             <p><source src="" type="video/mp4"></p>
             <p><source src="" type="video/mp4"></p>
+        </div>
+    </div>
+    <div class="btnmas">
+        <div class="buttonmas">
+            <span class="button-border">
+                <p style="font-family: Bebas Neue, sans-serif;">VER MAS FOTOS Y VIDEOS</p>
+            </span>
         </div>
     </div>
    
