cambios en la section

--- a/pages/deportes/Voley/home_voley.html
+++ b/pages/deportes/Voley/home_voley.html
@@ -176,7 +176,7 @@
             </div>
 
         </div>
-        <h2 class="divisiones">Estadisticas de la Nations League</h2>
+        <h2 class="divisiones">Estadisticas de la Nations League (Masculina)</h2>
         <div class="estadisticas_nations_league">
             
             <div class="estadisticas">
