se crean las carpetas de las fotos de galerias

--- a/pages/biblioteca_videos/home_videos.html
+++ b/pages/biblioteca_videos/home_videos.html
@@ -133,11 +133,11 @@
     </div>
     <!--boton para ver mas contenido de la biblioteca de cada uno de los deportes-->
     <div class="btnmas">
-        <div class="buttonmas">
+        <button class="buttonmas">
             <span class="button-border">
                 <p style="font-family: Bebas Neue, sans-serif;">VER MAS FOTOS Y VIDEOS</p>
             </span>
-        </div>
+        </button>
     </div>
     <div class="seccion" id="handball">
         <button class="uiverse">
@@ -179,11 +179,11 @@
         </div>
     </div>
     <div class="btnmas">
-        <div class="buttonmas">
+        <button class="buttonmas">
             <span class="button-border">
                 <p style="font-family: Bebas Neue, sans-serif;">VER MAS FOTOS Y VIDEOS</p>
             </span>
-        </div>
+        </button>
     </div>
     <div class="seccion">
         <button class="uiverse" id="badminton">
@@ -225,11 +225,11 @@
         </div>
     </div>
     <div class="btnmas">
-        <div class="buttonmas">
+        <button class="buttonmas">
             <span class="button-border">
                 <p style="font-family: Bebas Neue, sans-serif;">VER MAS FOTOS Y VIDEOS</p>
             </span>
-        </div>
+        </button>
     </div>
     <div class="seccion">
         <button class="uiverse" id="baseball">
@@ -271,11 +271,11 @@
         </div>
     </div>
     <div class="btnmas">
-        <div class="buttonmas">
+        <button class="buttonmas">
             <span class="button-border">
                 <p style="font-family: Bebas Neue, sans-serif;">VER MAS FOTOS Y VIDEOS</p>
             </span>
-        </div>
+        </button>
     </div>
     <div class="seccion">
         <button class="uiverse" id="tenis">
@@ -317,11 +317,11 @@
         </div>
     </div>
     <div class="btnmas">
-        <div class="buttonmas">
+        <button class="buttonmas">
             <span class="button-border">
                 <p style="font-family: Bebas Neue, sans-serif;">VER MAS FOTOS Y VIDEOS</p>
             </span>
-        </div>
+        </button>
     </div>
     <div class="seccion">
         <button class="uiverse" id="voley">
@@ -363,11 +363,11 @@
         </div>
     </div>
     <div class="btnmas">
-        <div class="buttonmas">
+        <button class="buttonmas">
             <span class="button-border">
                 <p style="font-family: Bebas Neue, sans-serif;">VER MAS FOTOS Y VIDEOS</p>
             </span>
-        </div>
+        </button>
     </div>
     <div class="seccion">
         <button class="uiverse" id="counter">
@@ -409,11 +409,11 @@
         </div>
     </div>
     <div class="btnmas">
-        <div class="buttonmas">
+        <button class="buttonmas">
             <span class="button-border">
                 <p style="font-family: Bebas Neue, sans-serif;">VER MAS FOTOS Y VIDEOS</p>
             </span>
-        </div>
+        </button>
     </div>
     <div class="seccion" >
         <button class="uiverse" id="formula" onclick="window.location.href = '../deportes/f1/home_f1.html'">
@@ -455,11 +455,11 @@
         </div>
     </div>
     <div class="btnmas">
-        <div class="buttonmas">
-            <span class="button-border">
-                <p style="font-family: Bebas Neue, sans-serif;">VER MAS FOTOS Y VIDEOS</p>
-            </span>
-        </div>
+            <button class="buttonmas" onclick="window.location.href = './fotos f1/fotos_f1.html'">
+                <span class="button-border">
+                    <p style="font-family: Bebas Neue, sans-serif;">VER MAS FOTOS Y VIDEOS</p>
+                </span>
+            </button>
     </div>
     <div class="seccion">
         <button class="uiverse" id="valorant">
@@ -501,11 +501,11 @@
         </div>
     </div>
     <div class="btnmas">
-        <div class="buttonmas">
+        <button class="buttonmas">
             <span class="button-border">
                 <p style="font-family: Bebas Neue, sans-serif;">VER MAS FOTOS Y VIDEOS</p>
             </span>
-        </div>
+        </button>
     </div>
    
     <!--EN ESTA PARTE SE ENCUENTRA EL TEXTO CAMBIANTE-->
