cambios en stats

--- a/pages/deportes/Voley/home_voley.html
+++ b/pages/deportes/Voley/home_voley.html
@@ -164,7 +164,7 @@
     </section>
 
     <section class="nations_league">
-        <div class="contenedor">
+        <div class="contenedor_vnl">
 
             <div class="logo_nations_league">
                 <img src="./imagenes/logo depologs/logo_nations_league.jpg" alt="">
@@ -184,13 +184,13 @@
                     <img src="./imagenes/fondo_nations_league.jpeg" alt="">
                 </div>
                 <div class="jugador">
-                    <img src="./imagenes/Jugadores/agustin_loser.png" alt="">
+                    <img src="./imagenes/Jugadores/yuki_ishikawa.png" alt="">
                 </div>
                 <div class="jugador_info">
-                    <h3 class="titulo_info">Mejor Bloqueador</h3>
-                    <h2>53</h2>
-                    <p>Agustin Loser</p>
-                    <p><img src="./imagenes/banderas/bandera_argentina.png" alt="" height="15px" width="30px">ARGENTINA</p>
+                    <h3 class="titulo_info">Mejor Anotador</h3>
+                    <h2>275</h2>
+                    <p>Yuki Ishikawa</p>
+                    <p><img src="./imagenes/banderas/bandera_japon.png" alt="" height="15px" width="30px"> Japón</p>
                 </div>
             </div>
 
@@ -199,13 +199,28 @@
                     <img src="./imagenes/fondo_nations_league.jpeg" alt="">
                 </div>
                 <div class="jugador">
-                    <img src="./imagenes/Jugadores/agustin_loser.png" alt="">
+                    <img src="./imagenes/Jugadores/agus_loser.png" alt="">
                 </div>
                 <div class="jugador_info">
                     <h3 class="titulo_info">Mejor Bloqueador</h3>
                     <h2>53</h2>
                     <p>Agustin Loser</p>
-                    <p><img src="./imagenes/banderas/bandera_argentina.png" alt="" height="15px" width="30px">ARGENTINA</p>
+                    <p><img src="./imagenes/banderas/bandera_argentina.png" alt="" height="15px" width="30px"> ARGENTINA</p>
+                </div>
+            </div>
+
+            <div class="estadisticas">
+                <div class="estadistica_back">
+                    <img src="./imagenes/fondo_nations_league.jpeg" alt="">
+                </div>
+                <div class="jugador">
+                    <img src="./imagenes/Jugadores/yuki_ishikawa.png" alt="">
+                </div>
+                <div class="jugador_info">
+                    <h3 class="titulo_info">Mejor Anotador</h3>
+                    <h2>275</h2>
+                    <p>Yuki Ishikawa</p>
+                    <p><img src="./imagenes/banderas/bandera_japon.png" alt="" height="15px" width="30px"> Japón</p>
                 </div>
             </div>
             <div class="estadisticas">
